--- a/src/dis_tutorial3/CMakeLists.txt
+++ b/src/dis_tutorial3/CMakeLists.txt
@@ -29,6 +29,7 @@ install(DIRECTORY
 install(PROGRAMS
   scripts/detect_people.py
   scripts/robot_commander.py
+  scripts/detect_qr.py
   scripts/transform_point.py
   DESTINATION lib/${PROJECT_NAME})
 
